{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 313,
  "lineage": "151275e7-61a0-dbc3-5fd7-f0b288a65b98",
  "resources": [
    {
      "module": "module.genpact-poc-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "PoCgenpactalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484010831236:loadbalancer/app/PoCgenpactalb/27e3d704676dd361",
            "arn_suffix": "app/PoCgenpactalb/27e3d704676dd361",
            "dns_name": "PoCgenpactalb-717703006.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:484010831236:loadbalancer/app/PoCgenpactalb/27e3d704676dd361",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "PoCgenpactalb",
            "security_groups": [
              "sg-0119b77f85995b5dc",
              "sg-04f3986a3366ef96c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09ce1e8e58149d73e"
              },
              {
                "subnet_id": "subnet-0d60a7610ad6924ad"
              }
            ],
            "subnets": [
              "subnet-09ce1e8e58149d73e",
              "subnet-0d60a7610ad6924ad"
            ],
            "tags": {
              "Environment": "POC"
            },
            "tags_all": {
              "Environment": "POC"
            },
            "vpc_id": "vpc-0937991b7fe2a0158",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.genpact-poc-ec2-App-Server.aws_instance.AppServer",
            "module.genpact-poc-sg.aws_security_group.PoC-Bastion_Host_SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Internal-SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Web_Server_SG",
            "module.genpact-poc-vpc.aws_subnet.private_Subnet",
            "module.genpact-poc-vpc.aws_subnet.public_Subnet",
            "module.genpact-poc-vpc.aws_subnet.public_Subnet1",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484010831236:listener/app/PoCgenpactalb/27e3d704676dd361/ab275dd3628c4813",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:484010831236:targetgroup/PoC-albTG/ceb9dc7a4246cdd9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:484010831236:listener/app/PoCgenpactalb/27e3d704676dd361/ab275dd3628c4813",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:484010831236:loadbalancer/app/PoCgenpactalb/27e3d704676dd361",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.genpact-poc-alb.aws_lb.PoCgenpactalb",
            "module.genpact-poc-alb.aws_lb_target_group.albTG",
            "module.genpact-poc-ec2-App-Server.aws_instance.AppServer",
            "module.genpact-poc-sg.aws_security_group.PoC-Bastion_Host_SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Internal-SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Web_Server_SG",
            "module.genpact-poc-vpc.aws_subnet.private_Subnet",
            "module.genpact-poc-vpc.aws_subnet.public_Subnet",
            "module.genpact-poc-vpc.aws_subnet.public_Subnet1",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "albTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484010831236:targetgroup/PoC-albTG/ceb9dc7a4246cdd9",
            "arn_suffix": "targetgroup/PoC-albTG/ceb9dc7a4246cdd9",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:484010831236:targetgroup/PoC-albTG/ceb9dc7a4246cdd9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "PoC-albTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0937991b7fe2a0158"
          },
          "dependencies": [
            "module.genpact-poc-ec2-App-Server.aws_instance.AppServer",
            "module.genpact-poc-sg.aws_security_group.PoC-Bastion_Host_SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Internal-SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Web_Server_SG",
            "module.genpact-poc-vpc.aws_subnet.private_Subnet",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tgattachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:484010831236:targetgroup/PoC-albTG/ceb9dc7a4246cdd9-20210924142135818400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:484010831236:targetgroup/PoC-albTG/ceb9dc7a4246cdd9",
            "target_id": "i-0179d3f510e13e1e1"
          },
          "dependencies": [
            "module.genpact-poc-alb.aws_lb_target_group.albTG",
            "module.genpact-poc-ec2-App-Server.aws_instance.AppServer",
            "module.genpact-poc-ec2-Web-Server.aws_instance.WebServer",
            "module.genpact-poc-sg.aws_security_group.PoC-Bastion_Host_SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Internal-SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Web_Server_SG",
            "module.genpact-poc-vpc.aws_subnet.private_Subnet",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-bastion_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:484010831236:instance/i-07d9fb3c1b2fdda78",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d9fb3c1b2fdda78",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Usnv-anshul",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c1630aad1339f800",
            "private_dns": "ip-192-168-0-12.ec2.internal",
            "private_ip": "192.168.0.12",
            "public_ip": "3.88.232.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ff038e5e4daabde2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d60a7610ad6924ad",
            "tags": {
              "Name": "PoC-BastionHost"
            },
            "tags_all": {
              "Name": "PoC-BastionHost"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0119b77f85995b5dc",
              "sg-083362be82bf0d0a1"
            ]
          },
          "dependencies": [
            "module.genpact-poc-sg.aws_security_group.PoC-Bastion_Host_SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Internal-SG",
            "module.genpact-poc-vpc.aws_subnet.public_Subnet",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-ec2-App-Server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "AppServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:484010831236:instance/i-0596bca4328f85ba7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0596bca4328f85ba7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Usnv-anshul",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01683debec92269a3",
            "private_dns": "ip-192-168-0-25.ec2.internal",
            "private_ip": "192.168.0.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08a7bb85fb9fe299d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0537e8b0a6df59b08",
            "tags": {
              "Name": "PoC-AppServer"
            },
            "tags_all": {
              "Name": "PoC-AppServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0119b77f85995b5dc"
            ]
          },
          "dependencies": [
            "module.genpact-poc-sg.aws_security_group.PoC-Bastion_Host_SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Internal-SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Web_Server_SG",
            "module.genpact-poc-vpc.aws_subnet.private_Subnet",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-ec2-Web-Server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:484010831236:instance/i-0179d3f510e13e1e1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0179d3f510e13e1e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Usnv-anshul",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-095448d9c9471926b",
            "private_dns": "ip-192-168-0-30.ec2.internal",
            "private_ip": "192.168.0.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01c4ca110d7bddca5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0537e8b0a6df59b08",
            "tags": {
              "Name": "PoC-WebServer"
            },
            "tags_all": {
              "Name": "PoC-WebServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0119b77f85995b5dc"
            ]
          },
          "dependencies": [
            "module.genpact-poc-sg.aws_security_group.PoC-Bastion_Host_SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Internal-SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Web_Server_SG",
            "module.genpact-poc-vpc.aws_subnet.private_Subnet",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PoC-Bastion_Host_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:security-group/sg-083362be82bf0d0a1",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083362be82bf0d0a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow bastion Host to ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PoC-Bastion_Host_SG",
            "name_prefix": "",
            "owner_id": "484010831236",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0937991b7fe2a0158"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PoC-Internal-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:security-group/sg-0119b77f85995b5dc",
            "description": "Security group for Internal communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0119b77f85995b5dc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SG for InterCommunication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "PoC-Internal-SG",
            "name_prefix": "",
            "owner_id": "484010831236",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0937991b7fe2a0158"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PoC-Web_Server_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:security-group/sg-04f3986a3366ef96c",
            "description": "Security group for http request",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "test",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f3986a3366ef96c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Rule for WebSerer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "PoC-Web_Server_SG",
            "name_prefix": "",
            "owner_id": "484010831236",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0937991b7fe2a0158"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "genpact-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0aedceb6bfc9a997a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-208-74-26.compute-1.amazonaws.com",
            "public_ip": "3.208.74.26",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:internet-gateway/igw-0e659ce094bdbf433",
            "id": "igw-0e659ce094bdbf433",
            "owner_id": "484010831236",
            "tags": {
              "Name": "myigw"
            },
            "tags_all": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-0937991b7fe2a0158"
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aedceb6bfc9a997a",
            "connectivity_type": "public",
            "id": "nat-014723a1ebb5374db",
            "network_interface_id": "eni-0b4115e57a9f8047a",
            "private_ip": "192.168.0.14",
            "public_ip": "3.208.74.26",
            "subnet_id": "subnet-0d60a7610ad6924ad",
            "tags": {
              "Name": "mynet"
            },
            "tags_all": {
              "Name": "mynet"
            }
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_eip.genpact-eip",
            "module.genpact-poc-vpc.aws_internet_gateway.myigw",
            "module.genpact-poc-vpc.aws_subnet.public_Subnet",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Privaterouter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:route-table/rtb-0f833721bb4ae5d4d",
            "id": "rtb-0f833721bb4ae5d4d",
            "owner_id": "484010831236",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-014723a1ebb5374db",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Privaterouter"
            },
            "tags_all": {
              "Name": "Privaterouter"
            },
            "vpc_id": "vpc-0937991b7fe2a0158"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.genpact-poc-vpc.aws_eip.genpact-eip",
            "module.genpact-poc-vpc.aws_internet_gateway.myigw",
            "module.genpact-poc-vpc.aws_nat_gateway.mynet",
            "module.genpact-poc-vpc.aws_subnet.public_Subnet",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Publicrouter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:route-table/rtb-04fc0e58e5eb11d5e",
            "id": "rtb-04fc0e58e5eb11d5e",
            "owner_id": "484010831236",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e659ce094bdbf433",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Router_Table"
            },
            "tags_all": {
              "Name": "Public_Router_Table"
            },
            "vpc_id": "vpc-0937991b7fe2a0158"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.genpact-poc-vpc.aws_internet_gateway.myigw",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c73bad5600674a41",
            "route_table_id": "rtb-04fc0e58e5eb11d5e",
            "subnet_id": "subnet-0d60a7610ad6924ad"
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_internet_gateway.myigw",
            "module.genpact-poc-vpc.aws_route_table.Publicrouter",
            "module.genpact-poc-vpc.aws_subnet.public_Subnet",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069a60a5809799077",
            "route_table_id": "rtb-0f833721bb4ae5d4d",
            "subnet_id": "subnet-0537e8b0a6df59b08"
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_eip.genpact-eip",
            "module.genpact-poc-vpc.aws_internet_gateway.myigw",
            "module.genpact-poc-vpc.aws_nat_gateway.mynet",
            "module.genpact-poc-vpc.aws_route_table.Privaterouter",
            "module.genpact-poc-vpc.aws_subnet.private_Subnet",
            "module.genpact-poc-vpc.aws_subnet.public_Subnet",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:subnet/subnet-0537e8b0a6df59b08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.16/28",
            "id": "subnet-0537e8b0a6df59b08",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484010831236",
            "tags": {
              "Name": "privateSubnet"
            },
            "tags_all": {
              "Name": "privateSubnet"
            },
            "vpc_id": "vpc-0937991b7fe2a0158"
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:subnet/subnet-03521913eb9875c48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.48/28",
            "id": "subnet-03521913eb9875c48",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484010831236",
            "tags": {
              "Name": "privateSubnet1"
            },
            "tags_all": {
              "Name": "privateSubnet1"
            },
            "vpc_id": "vpc-0937991b7fe2a0158"
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:subnet/subnet-0d60a7610ad6924ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/28",
            "id": "subnet-0d60a7610ad6924ad",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "484010831236",
            "tags": {
              "Name": "publicSubnet"
            },
            "tags_all": {
              "Name": "publicSubnet"
            },
            "vpc_id": "vpc-0937991b7fe2a0158"
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:subnet/subnet-09ce1e8e58149d73e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.32/28",
            "id": "subnet-09ce1e8e58149d73e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484010831236",
            "tags": {
              "Name": "publicSubnet1"
            },
            "tags_all": {
              "Name": "publicSubnet1"
            },
            "vpc_id": "vpc-0937991b7fe2a0158"
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:vpc/vpc-0937991b7fe2a0158",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/26",
            "default_network_acl_id": "acl-0be65c82abd80849b",
            "default_route_table_id": "rtb-0577293342ea380e0",
            "default_security_group_id": "sg-0446d2326e2f53e14",
            "dhcp_options_id": "dopt-58d0ff22",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0937991b7fe2a0158",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0577293342ea380e0",
            "owner_id": "484010831236",
            "tags": {
              "Name": "mypocvpc"
            },
            "tags_all": {
              "Name": "mypocvpc"
            }
          }
        }
      ]
    }
  ]
}